# ADLambda

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  RELEASE.md
LambdaSupport/: Makefile  (+3 more)
LambdaSupport/libfsdetcore/: .gitignore  CMakeLists.txt  Changelog  INSTALL
LambdaSupport/libfsdetcore/cmake/: FindLibBoost.cmake  Version.h.cmake  pkgconfig.pc.cmake
LambdaSupport/libfsdetcore/include/: CMakeLists.txt  Globals.h  MemUtils.h  MemUtils.tpp  NetworkImplementation.h  NetworkInterface.h  ThreadUtils.h  Utils.h
LambdaSupport/libfsdetcore/src/: CMakeLists.txt  FilesOperation.cpp  Globals.cpp  NetworkImplementation.cpp  NetworkInterface.cpp  ThreadUtils.cpp  Utils.cpp
LambdaSupport/libfsdetcore/test/: CMakeLists.txt  FilesOperationTest.cpp  FilesOperationTest.h  MemUtilsTest.cpp  MemUtilsTest.h  ThreadUtilsTest.cpp  ThreadUtilsTest.h  UtilsTest.cpp  UtilsTest.h
LambdaSupport/libfsdetcore/test/testdata/: test.txt
LambdaSupport/liblambda/: .gitignore  CMakeLists.txt  Changelog  INSTALL  README-config-files.txt
LambdaSupport/liblambda/cmake/: FindAHA.cmake  FindLibBoost.cmake  FindLibFSDETCore.cmake  FindZlib.cmake  Version.h.cmake  pkgconfig.pc.cmake
LambdaSupport/liblambda/config/: libconfig
LambdaSupport/liblambda/config/CdTeHexa1/ContinuousReadWrite/: Chip10_DACsetting.txt  Chip11_DACsetting.txt  Chip1_DACsetting.txt  Chip2_DACsetting.txt  LambdaConfig.txt
LambdaSupport/liblambda/config/CdTeHexa1/ContinuousReadWrite/NonscaledDacs/: Chip11_DACsetting.txt  Chip3_DACsetting.txt
LambdaSupport/liblambda/config/CdTeHexa1/TwentyFourBit/: Chip12_DACsetting.txt  Chip3_DACsetting.txt  LambdaConfig.txt
LambdaSupport/liblambda/config/FullRXModule1/SingleThresholdBasicLowTPBuff/: Chip10_DACsetting.txt  Chip11_DACsetting.txt  Chip12_DACsetting.txt  Chip1_DACsetting.txt  Chip2_DACsetting.txt  Chip3_DACsetting.txt  Chip4_DACsetting.txt  Chip5_DACsetting.txt  Chip6_DACsetting.txt  Chip7_DACsetting.txt  Chip8_DACsetting.txt  Chip9_DACsetting.txt  LambdaConfig.txt
LambdaSupport/liblambda/config/FullRXModule1/lookups/: correction_si_1556_516.int32  nominator_si_1556_516.int32  pixelmask_si_1556_516.uint32
LambdaSupport/liblambda/config/FullRXModule2/ContinuousReadWrite/: Chip6_DACsetting.txt  Chip7_DACsetting.txt  Chip9_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule2/SingleThresholdBasicLowTPBuff/: Chip10_DACsetting.txt  Chip11_DACsetting.txt  Chip1_DACsetting.txt  Chip3_DACsetting.txt  Chip4_DACsetting.txt  Chip8_DACsetting.txt  LambdaConfig.txt
LambdaSupport/liblambda/config/FullRXModule2/TwentyFourBit/: Chip12_DACsetting.txt  Chip2_DACsetting.txt  Chip5_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule3/ContinuousReadWrite/: Chip4_DACsetting.txt  Chip5_DACsetting.txt  Chip7_DACsetting.txt  Chip9_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule3/SingleThresholdBasicLowTPBuff/: Chip10_DACsetting.txt  Chip11_DACsetting.txt  Chip1_DACsetting.txt  Chip3_DACsetting.txt  Chip6_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule3/TwentyFourBit/: Chip12_DACsetting.txt  Chip2_DACsetting.txt  Chip8_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule4/ContinuousReadWrite/: #LambdaConfig.txt#  Chip10_DACsetting.txt  Chip2_DACsetting.txt  Chip3_DACsetting.txt  Chip7_DACsetting.txt  Chip8_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule4/SingleImageTest/: Chip12_DACsetting.txt  Chip1_DACsetting.txt  Chip5_DACsetting.txt  Chip6_DACsetting.txt  LambdaConfig.txt
LambdaSupport/liblambda/config/FullRXModule4/SingleThresholdBasicLowTPBuff/: Chip4_DACsetting.txt  Chip9_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule4/TwentyFourBit/: #LambdaConfig.txt#  Chip11_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule7/ContinuousReadWrite/: Chip2_DACsetting.txt
LambdaSupport/liblambda/config/FullRXModule7/SingleThresholdBasicLowTPBuff/: LambdaConfig.txt
LambdaSupport/liblambda/config/GaAsHexa1/ContinuousReadWrite/: LambdaConfig.txt
LambdaSupport/liblambda/config/GaAsHexa1/DualThreshold/: Chip10_DACsetting.txt  Chip11_DACsetting.txt  Chip12_DACsetting.txt  Chip1_DACsetting.txt  Chip2_DACsetting.txt  Chip3_DACsetting.txt  LambdaConfig.txt
LambdaSupport/liblambda/config/GaAsHexa1/SingleThresholdBasicLowTPBuff/: Chip10_DACsetting.txt  Chip1_DACsetting.txt  Chip2_DACsetting.txt  Chip3_DACsetting.txt
LambdaSupport/liblambda/config/GaAsHexa1/TwentyFourBit/: Chip11_DACsetting.txt  Chip12_DACsetting.txt  LambdaConfig.txt  OldLambdaConfig.txt
LambdaSupport/liblambda/config/GaAsHexa1/lookups/: correction_gaas_774_516.int32  nominator_gaas_774_516.int32  pixelmask_gaas_774_516.uint32
LambdaSupport/liblambda/doc/: doxygen.config
LambdaSupport/liblambda/include/: CMakeLists.txt  Compression.h  CompressionContext.h  DistortionCorrector.h  ImageDecoder.h  LambdaConfigReader.h  LambdaDataReceiver.h  LambdaDataRecvFactory.h  LambdaGlobals.h  LambdaInterface.h  LambdaModule.h  LambdaSysImpl.h  LambdaTask.h  Version.h  ZlibWrapper.h
LambdaSupport/liblambda/specification/: class.diagram
LambdaSupport/liblambda/src/: CMakeLists.txt  Compression.cpp  CompressionContext.cpp  ImageDecoder.cpp  LambdaConfigReader.cpp  LambdaDataReceiver.cpp  LambdaDataRecvFactory.cpp  LambdaModule.cpp  LambdaSysImpl.cpp  LambdaTask.cpp  ZlibWrapper.cpp
LambdaSupport/liblambda/test/: CMakeLists.txt
LambdaSupport/liblambda/test/include/: CheckEquality.h  FileReaderTest.h  LambdaSysImplTest.h  ModuleTest.h  SystemConfigTest.h
LambdaSupport/liblambda/test/mock/: MockMemUtils.h  MockNetworkImplementation.cpp  MockNetworkImplementation.h  MockThreadUtils.cpp  MockThreadUtils.h
LambdaSupport/liblambda/test/src/: CMakeLists.txt  CheckEquality.cpp  CompressionTest.cpp  CompressionTest.h  ConfigReaderTest.cpp  ConfigReaderTest.h  DistortionCorrectorTest.cpp  DistortionCorrectorTest.h  FileReaderTest.cpp  ImageDecoderTest.cpp  ImageDecoderTest.h  LambdaSysImplTest.cpp  MockNetwork.h  ModuleTest.cpp  ModuleTest.h  SystemConfigTest.cpp  TestUtils.cpp  TestUtils.h  main.cpp
LambdaSupport/liblambda/test/testdata/: SystemConfig.txt
(+181 files in other folders)
